5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1734_2505.log
== TEST (2019-05-16 10:22:21) 
-- CODE:
from math import *
s=9
print(s)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:41:49) 
-- CODE:
from math import *
x=eval(input("digite o angulo: "))
k=int(input("o numero k de termos: "))
t=0
sen=0
while (t<k):
	if(t%2!=):
		sen=sen+x**(1+2*t)/factorial(1+2*t)
		t=t+1
	else:
		sen=sen-x**(1+2*t)/factorial(1+2*t)
		t=t+1
print(round((-1)*sen,10))
-- ERROR:
File "XXXX", line 7
    if(t%2!=):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:42:05) 
-- CODE:
from math import *
x=eval(input("digite o angulo: "))
k=int(input("o numero k de termos: "))
t=0
sen=0
while (t<k):
	if(t%2!=0):
		sen=sen+x**(1+2*t)/factorial(1+2*t)
		t=t+1
	else:
		sen=sen-x**(1+2*t)/factorial(1+2*t)
		t=t+1
print(round((-1)*sen,10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:42:22) 
-- CODE:
from math import *
x=eval(input("digite o angulo: "))
k=int(input("o numero k de termos: "))
t=0
sen=0
while (t<k):
	if(t%2!=0):
		sen=sen+x**(1+2*t)/factorial(1+2*t)
		t=t+1
	else:
		sen=sen-x**(1+2*t)/factorial(1+2*t)
		t=t+1
print(round((-1)*sen,10))
-- EXECUTION TIME:
0.167274
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
